# Chief-of-Staff

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Chief_of_Staff_Feature_Scope_March_2026.docx  DONNA_CONTEXT_MEMORY_BUILD_PROMPT.md  DONNA_DMG_DISTRIBUTION_PROMPT.md  Donna Brand Identity.html  Donna FINAL Logo.html  Donna-AI-Privacy-Policy.docx  Donna-AI-Terms-of-Service.docx  Donna_Agent_Architecture_Audit_March_2026.docx  Donna_BeforeYouAsk_AI_Production_Pack.docx  Donna_BeforeYouAsk_Prompts_V2_ZeroAmbiguity.docx  Donna_ImDonna_reMotion_Production_Breakdown.docx  Donna_Social_Media_Strategy_Launch_2026.docx  Donna_TheNoise_reMotion_Production_Breakdown.docx  Donna_TheNoise_reMotion_Production_Breakdown_V2.docx  I'm Donna movie w Voiceover.pages  OpenClaw_Market_Research_March_2026.docx  PROSSER_BUILD_PROMPT.md  README.md  brand-options.html  donna-all-brand-options.html  donna-graduated-autonomy-prompt.docx  donna-logo-assets.html  donna-ui-components-prompt.docx  donna_pricing_strategy.docx  eslint.config.mjs  instrumentation-client.ts  littlebird-mvp-scope.md  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  trigger.config.ts  tsconfig.json
.claude/: settings.local.json
.git-rewrite/: backup-refs  commit  index  message  parse  revs
.husky/: pre-push
brand-identity-options/: 01-clarity.html  04-personal.html  05-reserve.html  07-the-editor.html  index.html
cli/: package.json
demo-video/: package-lock.json  package.json  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_observer.rs  lib.rs  quick_chat.rs  screen_ocr.rs  tray.rs
(+694 files in other folders)
