[package]
name = "donna"
version = "0.1.0"
description = "Donna — AI-powered personal intelligence"
authors = ["Nazir"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

# macOS desktop observation
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

# Apple Silicon Vision OCR (not available on Intel — AX-only fallback)
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
objc2 = "=0.5.2"
objc2-foundation = "=0.2.2"
